--- a/style.css
+++ b/style.css
@@ -31,3 +31,15 @@ Images:
 #row1{
     background-color: rgb(243, 183, 106);
 }
+
+
+body {
+    background-image: url(stretchImage.png);
+    background-size: 100%;
+    height: 100%;
+    width: 100%;
+}
+
+#row2{
+    background-color: rgb(241, 117, 0);
+}
